--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>hikan.ru</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
+    <!-- <link rel="shortcut icon" href="/assets/pic/favicon.ico?v={{ .version }}" type="image/x-icon"> -->
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <!-- <script>
+        document.addEventListener('htmx:afterSwap', function(evt) {
+            const triggeringElement = evt.detail.requestConfig.elt;
+            if (triggeringElement.hasAttribute('data-scroll-top')) {
+                window.scrollTo(0,0);
+            }
+        });
+    </script> -->
 </head>
 <body>
-    <div class="container">
-        <h1>{{heading}}</h1>
-        <p>This is the home page served from a weblit/luvit application.</p>
-        <ul>
-            <li><a href="/">Home</a></li>
-        </ul>
+    <div style="text-align: center;">
+        <p>
+            <h1>hikan.ru&nbsp;🥶</h1>
+            <code>by serr in saint p city, Russia&nbsp;🌪</code>
+        </p>
+        <p>
+            <a href="/posts/0"
+                hx-get="/posts/0?ajax=true"
+                hx-target="main"
+                hx-swap="outerHTML"
+                hx-push-url="/posts/0"
+                data-scroll-top="true">
+                    main page</a>
+            <a href="/about"
+                hx-get="/about?ajax=true"
+                hx-target="main"
+                hx-swap="outerHTML"
+                hx-push-url="/about"
+                data-scroll-top="true">
+                    about page</a>
+        </p>
     </div>
+    
+    <footer>
+        <div class="pic-container">
+            <img class="pic" src="2.jpg" 
+                style="width: 100%; height: 100%;">
+        </div>
+        <div class="pulse-container">
+            <p class="pulse-text" style="margin-bottom: 0;">
+                <code>🎵&nbsp;last played track: </code><code id="lastfm"
+                hx-get="/api/lastfm"
+                hx-trigger="load, every 30s"
+                hx-target="#lastfm"
+                hx-swap="innerHTML">waiting for a response from server... (JavaScript is required)</code><code>&nbsp;🎵</code>
+            </p>
+        </div>
+        <div>
+            <h1>
+                pages
+            </h1>
+            <p>
+                <a href="/posts/0"
+                    hx-get="/posts/0/?ajax=true"
+                    hx-target="main"
+                    hx-swap="outerHTML"
+                    hx-push-url="/posts/0"
+                    data-scroll-top="true">
+                        main page</a>
+                <br>
+                <a href="/about"
+                    hx-get="/about?ajax=true"
+                    hx-target="main"
+                    hx-swap="outerHTML"
+                    hx-push-url="/about"
+                    data-scroll-top="true">
+                        about page</a>
+            </p>
+            <h1>
+                contacts
+            </h1>
+            <p>
+                <a href="https://t.me/semaphoreslover" rel="me" target="_blank">telegram</a>
+            </p>
+            <h1>
+                other
+            </h1>
+            <p>
+                <a href="https://github.com/laserattack" rel="me" target="_blank">github</a><br>
+                <a href="https://mastodon.ml/@serr" rel="me" target="_blank">mastodon</a><br>
+                <a href="https://www.last.fm/ru/user/s3rr" rel="me" target="_blank">lastfm</a><br>
+                <a href="https://t.me/lolistack" rel="me" target="_blank">tg channel with pfps</a>
+            </p>
+            <h1 style="margin-bottom: -5px;">buttons</h1>
+            <p style="display: inline-block;">
+                <img src="/assets/pic/buttons/8015ani.gif?v={{ .version }}" style="margin: 5px;">
+                <img src="/assets/pic/buttons/8015cfe.gif?v={{ .version }}" style="margin: 5px;">
+                <a href="https://getfirefox.com/"><img src="/assets/pic/buttons/8015firefox.gif?v={{ .version }}" style="margin: 5px;"></a>
+                <img src="/assets/pic/buttons/8015nobuttons.gif?v={{ .version }}" style="margin: 5px;">
+                <img src="/assets/pic/buttons/8015tea.gif?v={{ .version }}" style="margin: 5px;">
+                <img src="/assets/pic/buttons/8015oss.png?v={{ .version }}" style="width: 80px; margin: 5px;">
+                <img src="/assets/pic/buttons/8015coffeegeek.png?v={{ .version }}" style="width: 80px; margin: 5px;">
+                <img src="/assets/pic/buttons/8015pie.png?v={{ .version }}" style="width: 80px; margin: 5px;">
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
