--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <div style="text-align: center;">
+        <h1>hikan.ru&nbsp;🥶</h1>
         <p>
-            <h1>hikan.ru&nbsp;🥶</h1>
-            <code>by serr in saint p city, Russia&nbsp;🌪</code>
+            <code>by serr in saint p city, Russia&nbsp;🌪</code><br>
+            <code>page cached at {{ cached_at }}</code>
         </p>
     </div>
     <main>
