--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
         <h1>hikan.ru&nbsp;🥶</h1>
         <p>
             <code>by serr in saint p city, Russia&nbsp;🌪</code><br>
-            <code>page cached at {{ cached_at }}</code>
+            <code>page rendered at {{ cached_at }}</code>
         </p>
     </div>
     <main>
