--- a/templates/home.html
+++ b/templates/home.html
@@ -18,51 +18,13 @@
     </div>
     <main>
         <div>
-            <h1>
-                what is it?
-            </h1>
-            <p>
-                this is my website. my name is serr and i do a bit of programming
-            </p>
-            <p>
-                i was born in 2003, i'm currently a cybersecurity major at university
-            </p>
-            <p>
-                <code>pronouns: he/him</code>
-            </p>
+            {{ firstPart }}
         </div>
         <div>
-            <h1>
-                what do i do?
-            </h1>
-            <p>
-                programming is my lifestyle
-            </p>
-            <p>
-                i love growing in all areas of programming - i am literally interested in everything: web development, low-level programming, formal grammars and a lot more
-            </p>
+            {{ secondPart }}
         </div>
         <div>
-            <h1>
-                things i love
-            </h1>
-            <p>
-                > <strong>coffee</strong>. i REALLY love coffee. almost any. and a lot of<br/>
-                > <strong>movies and TV series</strong> (especially TV series). i watch something almost every day<br/>
-                > <strong>true crime</strong>. i'm obsessed with serial killer cases, mysterious disappearances, unsolved murders - all that dark stuff<br/>
-                > <strong>russian underground rap</strong> like Slava KPSS, Zamay, MB Packet, Ovsyankin etc.<br/>
-                > <strong>simple and extensible code</strong>. i think if your code is overly complex, it means you are doing something wrong. most things are simpler than they seem
-            </p>
-            <details>
-                <summary class="pulse-text">click here if you want to see the sites&nbsp;i&nbsp;like</summary>
-                <p>
-                    > huge collection of Xakep issues -  <a href="https://図書館.きく.コム/" target="_blank">図書館.きく.コム</a><br/>
-                    > i like to surf here - <a href="https://neocities.org/browse" target="_blank">neocities.org/browse</a><br/>
-                    > very atmospheric forum about black metal -  <a href="https://www.lycanthropia.net/" target="_blank">lycanthropia</a><br/>
-                    > animated gif search from internet archive - <a href="https://gifcities.org/" target="_blank">gifcities.org</a><br/>
-                    > very cool design - <a href="https://combatbaby.neocities.org/" target="_blank">combatbaby.neocities.org</a><br/>
-                </p>
-            </details>
+            {{ thirdPart }}
         </div>
     </main>
     <footer>
