--- a/templates/home.html
+++ b/templates/home.html
@@ -18,13 +18,16 @@
     </div>
     <main>
         <div>
-            {{ firstPart }}
+            {{ 1 }}
         </div>
         <div>
-            {{ secondPart }}
+            {{ 2 }}
         </div>
         <div>
-            {{ thirdPart }}
+            {{ 3 }}
+        </div>
+        <div>
+            {{ 4 }}
         </div>
     </main>
     <footer>
