--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,7 +17,8 @@ html {
 
 body {
     width: 70%;
-    font-family: -apple-system, system-ui, blinkmacsystemfont, Segoe UI, roboto, oxygen, ubuntu, Helvetica Neue, arial, sans-serif;
+    /* font-family: -apple-system, system-ui, blinkmacsystemfont, Segoe UI, roboto, oxygen, ubuntu, Helvetica Neue, arial, sans-serif; */
+    font-family: sans-serif;
     font-size: 1.2em;
     display: flex;
     flex-wrap: wrap;
@@ -81,18 +82,6 @@ pre {
     word-wrap: normal;
     width: 0;
     min-width: calc(100% - 22px);
-}
-
-details > summary {
-    cursor: pointer;
-    display: inline-block;
-    width: auto;
-}
-
-details[open] > summary {
-    cursor: pointer;
-    display: inline-block;
-    width: auto;
 }
 
 .pic-container {
