--- a/templates/home.html
+++ b/templates/home.html
@@ -12,8 +12,8 @@
     <div style="text-align: center;">
         <h1>hikan.ru&nbsp;🥶</h1>
         <p>
-            <code>by serr in saint p city, Russia&nbsp;🌪</code><br>
-            <code>page rendered at {{ cached_at }}</code>
+            <strong><code>by serr in saint p city, Russia&nbsp;🌪</code><br>
+            <code>page rendered at {{ cached_at }}</code></strong>
         </p>
     </div>
     <main>
