--- a/templates/home.html
+++ b/templates/home.html
@@ -45,16 +45,16 @@
                 contacts
             </h1>
             <p>
-                <a href="https://t.me/semaphoreslover" rel="me" target="_blank">telegram</a>
+                <a href="https://t.me/semaphoreslover" rel="me">telegram</a>
             </p>
             <h1>
                 other
             </h1>
             <p>
-                <a href="https://github.com/laserattack" rel="me" target="_blank">github</a><br>
-                <a href="https://mastodon.ml/@serr" rel="me" target="_blank">mastodon</a><br>
-                <a href="https://www.last.fm/ru/user/s3rr" rel="me" target="_blank">lastfm</a><br>
-                <a href="https://t.me/lolistack" rel="me" target="_blank">tg channel with pfps</a>
+                <a href="https://github.com/laserattack" rel="me">github</a><br>
+                <a href="https://mastodon.ml/@serr" rel="me">mastodon</a><br>
+                <a href="https://www.last.fm/ru/user/s3rr" rel="me">lastfm</a><br>
+                <a href="https://t.me/lolistack" rel="me">tg channel with pfps</a>
             </p>
             <h1 style="margin-bottom: -5px;">buttons</h1>
             <p style="display: inline-block;">
